# bs-comfyui-workflow-manager

./: .comfyignore  .gitattributes  .gitignore  NOTICE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
bswm/: __init__.py  config.py  exporter.py  fsbrowse.py  git_ops.py  projects.py  routes.py  util.py  workflows.py
tests/: _fake.py  selftest.py  test_fsbrowse.py  test_git.py  test_projects.py  test_util.py  test_workflows.py
web/: comfy_ext.js
webapp/: app.js  fonts.css  index.html  styles.css
webapp/fonts/: OFL.txt
